--- a/layouts-backup/_default/single.html
+++ b/layouts-backup/_default/single.html
@@ -82,7 +82,7 @@
 
       <!-- Tags list -->
 
-      {{- partial "terms.html" (dict "taxonomy" "tags" "page" .) -}}
+      {{- partial "tags.html" (dict "taxonomy" "tags" "page" .) -}}
 
     </div>
 
